--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "moonshine/ckeditor": "2",
         "moonshine/moonshine": "^2.23"
     },
     "require-dev": {
